--- a/env.json.example
+++ b/env.json.example
@@ -1,1 +1,13 @@
-{}
+{
+  "app": {
+    "port": "8080"
+  },
+  "redis": {
+    "db": 0,
+    "host": "redis",
+    "port": "6379"
+  },
+  "rate_limiter": {
+    "by_ip": 100
+  }
+}
