fixing http files

--- a/env.json.example
+++ b/env.json.example
@@ -4,10 +4,14 @@
   },
   "redis": {
     "db": 0,
-    "host": "redis",
+    "host": "127.0.0.1",
     "port": "6379"
   },
   "rate_limiter": {
-    "by_ip": 100
+    "by_ip": {
+      "time_window": 1,
+      "max_requests": 10,
+      "blocked_duration": 600
+    }
   }
 }
