--- a/env.json.example
+++ b/env.json.example
@@ -4,14 +4,14 @@
   },
   "redis": {
     "db": 0,
-    "host": "127.0.0.1",
+    "host": "redis",
     "port": "6379"
   },
   "rate_limiter": {
     "by_ip": {
       "time_window": 1,
       "max_requests": 10,
-      "blocked_duration": 300
+      "blocked_duration": 60
     }
   }
 }
